{
    "name": "MobileInputControls",
    "maps": [
        {
            "name": "TouchControls",
            "id": "8331b7cd-cb86-4c84-be6a-f970230abe87",
            "actions": [
                {
                    "name": "Touch",
                    "type": "PassThrough",
                    "id": "98deb710-6c0d-4f60-a490-6628d19946b4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Touch#0",
                    "id": "b5f1e8f4-c1d0-4569-9304-11fd85cb69e9",
                    "path": "TouchInput",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "contact",
                    "id": "9701fe2c-46a0-4791-be18-d6d283fb8e41",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "position",
                    "id": "32d52792-131c-4328-b976-2d24b1aeb724",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "deltaPosition",
                    "id": "df3b017e-e22b-452d-b747-6ff0b5dbe35e",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "inputId",
                    "id": "cbcb7c88-a9bc-4a6f-ab1b-3352ebc3c0b4",
                    "path": "<Touchscreen>/primaryTouch/touchId",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "touchPhase",
                    "id": "7313355a-06a2-4011-bde0-47c430e2f34e",
                    "path": "<Touchscreen>/primaryTouch/phase",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Touch#1",
                    "id": "e723195b-e6f3-4c91-ab0e-ac59e801cb6b",
                    "path": "TouchInput",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "contact",
                    "id": "d3e0f9fe-014b-4304-84f6-a54e0edfcf19",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "position",
                    "id": "43cd0675-25e4-48d5-99d2-d7a32d52dacc",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "deltaPosition",
                    "id": "14ff1461-9561-4ad9-840a-5f099bd1cc6a",
                    "path": "<Touchscreen>/touch1/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "inputId",
                    "id": "1ae57bc8-47bd-4690-802d-d3f23622130d",
                    "path": "<Touchscreen>/touch1/touchId",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "touchPhase",
                    "id": "6f11c0a6-6484-43a3-afdb-136390ce6d7d",
                    "path": "<Touchscreen>/touch1/phase",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Mouse",
                    "id": "5a178f5f-e80d-4967-b370-f6086b84d3e7",
                    "path": "TouchInput",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "contact",
                    "id": "164eb939-394e-437e-be3f-f6eee52118ad",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "position",
                    "id": "8a3882ec-4c2b-4701-984c-0fa3e1b0bca8",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "deltaPosition",
                    "id": "36775d00-a266-4dcb-a18e-6035222cea5c",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Touch#2",
                    "id": "75faa183-05fa-4852-8e77-bd450cb28098",
                    "path": "TouchInput",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "contact",
                    "id": "7c02eafd-d57c-41f6-a5fd-c569a469beef",
                    "path": "<Touchscreen>/touch2/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "position",
                    "id": "99be0734-0875-4ab0-81cf-e43a14a2f5e8",
                    "path": "<Touchscreen>/touch2/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "deltaPosition",
                    "id": "eade1315-99c9-4dca-aec7-c00c54098802",
                    "path": "<Touchscreen>/touch2/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "inputId",
                    "id": "99b32762-4ed4-4134-ac2c-56a3cc1af049",
                    "path": "<Touchscreen>/touch2/touchId",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "touchPhase",
                    "id": "6cc1cf9c-e881-499b-9572-4cf85750b1db",
                    "path": "<Touchscreen>/touch2/phase",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Touch#3",
                    "id": "2a694799-4a97-4432-a088-cb7fbdc0ebb0",
                    "path": "TouchInput",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "contact",
                    "id": "19797647-8ae4-4f5f-b7e6-a5c9f375fd29",
                    "path": "<Touchscreen>/touch3/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "position",
                    "id": "c45b1dac-6acc-4b52-8934-07c22b9f610c",
                    "path": "<Touchscreen>/touch3/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "deltaPosition",
                    "id": "ca5d71ba-35da-4d3f-a296-9229df5403d7",
                    "path": "<Touchscreen>/touch3/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "inputId",
                    "id": "b6e511ca-ddea-4196-a48f-a38f04b13aa2",
                    "path": "<Touchscreen>/touch3/touchId",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "touchPhase",
                    "id": "26bf12b7-88cd-4b84-b325-54b1a7de4ecc",
                    "path": "<Touchscreen>/touch3/phase",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Touch#4",
                    "id": "64a84923-1fd8-4708-bba4-63fad085e508",
                    "path": "TouchInput",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "contact",
                    "id": "9f8db22a-c20e-437a-9d72-c4b78688b27c",
                    "path": "<Touchscreen>/touch4/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "position",
                    "id": "4bc9fde5-9a85-4584-84d3-42ca29ce0528",
                    "path": "<Touchscreen>/touch4/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "deltaPosition",
                    "id": "b0588499-569a-4d5b-aa0a-e359f56afedf",
                    "path": "<Touchscreen>/touch4/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "inputId",
                    "id": "c134624e-6587-4892-801f-11d7fe6a055f",
                    "path": "<Touchscreen>/touch4/touchId",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "touchPhase",
                    "id": "d32f689f-4182-4f38-adf1-76f3302a7c6e",
                    "path": "<Touchscreen>/touch4/phase",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}